--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 /* CSS files add styling rules to your content */
 
 body {
-  font-family: helvetica, arial, sans-serif;
   margin: 2em;
+  font-family: 'Kalam', cursive;
 }
 
 h1 {
   font-style: italic;
   color: #373fff;
 }
+/* CSS files add styling rules to your content */
+
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
@@ -16,4 +18,97 @@ table, th, td {
 th, td {
   padding: 5px;
   text-align: left;    
+}
+* {
+  box-sizing: border-box;
+}
+
+
+.box {
+  float: left;
+  width: 33.33%;
+  padding: 50px;
+  height: 200px;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: black;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px 10px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: blue;
+}
+
+.active {
+  background-color: red;
+}
+.redbox {
+  background-color: red;
+}
+.greenbox {
+  background-color: green;
+  color: yellow;
+  font-size:20px;
+}
+.bluebox {
+  background-color: blue;
+}
+.yellowbox {
+  background-color: yellow;
+}
+.threecol {
+  width: 33.33%
+}
+.twocol {
+  width: 50%
+}
+.onecol {
+  width: 100%
+}
+/* unvisited link */
+a:link {
+  color: black;
+}
+
+/* visited link */
+a:visited {
+  color: green;
+}
+
+/* mouse over link */
+a:hover {
+  color: hotpink;
+}
+
+/* selected link */
+a:active {
+  color: blue;
+}
+body {
+  background-image: url("https://cdn.glitch.com/2047236d-de47-46a6-85e7-8c0b2cf2259d%2FOIP.jpg?v=1605065594927");
+  background-color: #cccccc;
+  background-repeat: no-repeat;
+  background-position: center;background-size: cover;
+  background-size: cover;
 }
