--- a/style.css
+++ b/style.css
@@ -1,18 +1,17 @@
 /* CSS files add styling rules to your content */
-
 body {
   margin: 2em;
   font-family: 'Kalam', cursive;
 }
-
+body {
+  background-color: #cccccc;
+}
 h1 {
   font-style: italic;
   color: #373fff;
 }
-/* CSS files add styling rules to your content */
-
 table, th, td {
-  border: 1px solid black;
+  border: 1px solid gray;
   border-collapse: collapse;
 }
 th, td {
@@ -22,105 +21,116 @@ th, td {
 * {
   box-sizing: border-box;
 }
-
 .box {
   float: left;
-  width: 33.33%;
-  padding: 50px;
-  height: 200px;
+  overflow: hidden;
+  padding: 10px;
 }
 
 .clearfix::after {
   content: "";
   clear: both;
   display: table;
-}
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: black;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: inline-block;
-  color: white;
-  text-align: center;
-  padding: 14px 10px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: blue;
-}
-
-.active {
-  background-color: red;
-}
-.redbox {
-  background-color: red;
-}
-.greenbox {
-  background-color: green;
-  color: yellow;
-  font-size:20px;
-}
-.bluebox {
-  background-color: blue;
-}
-.yellowbox {
-  background-color: yellow;
-}
-.threecol {
-  width: 33.33%
-}
-.twocol {
-  width: 50%
-}
-.onecol {
-  width: 100%
+  width:100%;
 }
 /* unvisited link */
 a:link {
-  color: black;
+  color: white;
+  text-decoration: none;
 }
 
 /* visited link */
 a:visited {
-  color: green;
+  color: white;
+  text-decoration: none;
 }
 
 /* mouse over link */
 a:hover {
-  color: hotpink;
+  color: gray;
+  text-decoration: none;
 }
 
 /* selected link */
 a:active {
-  color: blue;
-}
-body {
-  background-image: url("https://cdn.glitch.com/2047236d-de47-46a6-85e7-8c0b2cf2259d%2FOIP.jpg?v=1606268445324");
-  background-color: #cccccc;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-/* Navbar container */
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-  font-family: Arial;
+  color: white;
+  text-decoration: none;
 }
 
-/* Links inside the navbar */
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: black; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: gray; /* Add a dark-grey background on hover */
+}
+body, html {
+  height: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.bg-image {
+  /* The image used */
+  background-image: url("https://cdn.glitch.com/2e4d7066-c681-47f7-9db6-7617e196bf82%2Fc8dc222a71eb5256705ccb6ef501988c.gif?v=1605666985606");
+
+  /* Add the blur effect */
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+
+  /* Full height */
+  height: 100%;
+  width: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* Position text in the middle of the page/image */
+.bg-text {
+  color: white;
+  font-weight: bold;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+}
+.btn {
+  border: 2px solid white;
+  border-radius: 5px;
+  background-color: transparent;
+  color: gray;
+  padding: 12px 24px;
+  font-size: 16px;
+  cursor: pointer;
+}
+.navbar {
+  overflow: hidden;
+  background-color: #aaa;
+}
+
 .navbar a {
-  float: left;
+  float: right;
   font-size: 16px;
   color: white;
   text-align: center;
@@ -128,116 +138,306 @@ body {
   text-decoration: none;
 }
 
-/* The dropdown container */
 .dropdown {
-  float: left;
+  float: right;
   overflow: hidden;
 }
 
-/* Dropdown button */
 .dropdown .dropbtn {
-  font-size: 16px;
+  font-size: 16px;  
   border: none;
   outline: none;
   color: white;
   padding: 14px 16px;
   background-color: inherit;
-  font-family: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
+  font-family: inherit;
+  margin: 0;
 }
 
-/* Add a red background color to navbar links on hover */
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
+  background-color: #79D1D3;
 }
-
-/* Dropdown content (hidden by default) */
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: #aaa;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
   float: none;
-  color: black;
+  color: white;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
 }
 
-/* Add a grey background color to dropdown links on hover */
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: #79D1D3;
 }
 
-/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
 }
-/* Use a media query to add a break point at 800px: */
-@media screen and (max-width:800px) {
-  .threecol, .twocol, .onecol {
-    width:100%; /* The width is 100%, when the viewport is 800px or smaller */
-  }
+/* Gray */
+.default {
+  border-color:white;
+  color: gray;
 }
-* {box-sizing: border-box;}
 
-.img-zoom-container {
+.default:hover {
+  background: white;
+  border-color:white;
+}
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
   position: relative;
+  margin: auto;
 }
 
-.img-zoom-lens {
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
   position: absolute;
-  border: 1px solid black;
-  /*set the size of the lens:*/
-  width: 40px;
-  height: 40px;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.4s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
 }
 
-.img-zoom-result {
-  border: 1px solid black;
-  /*set the size of the result div:*/
-  width: 300px;
-  height: 300px;
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
 
-.dropbtn {
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
   background-color: #4CAF50;
   color: white;
-  padding: 16px;
-  font-size: 16px;
+  padding: 12px 20px;
   border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-.dropdown {
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+  background-color: #aaa;
+  height:245px;
+  width:245px;
+  padding:10px;
+  border:10px;
+}
+.container {
   position: relative;
-  display: inline-block;
+  display: table;
+  float: left;
 }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
+.image {
   display: block;
+  width: 100%;
+  height: auto;
 }
 
-.dropdown-content a:hover {background-color: #ddd;}
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: lightgray;
+}
 
-.dropdown:hover .dropdown-content {display: block;}
+.container:hover .overlay {
+  opacity: 1;
+}
 
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+}
+
+.button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+}
+
+.button:hover {
+  background-color: #555;
+}
+.iframe-container {
+  position:relative;
+  width:100%;
+  padding-bottom:56.25%;
+  height:0;
+}
+.iframe-container iframe{
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+}
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 8px 8px 8px 8px rgba(0,0,0,0.2);
+  width: 250px;
+  height: 430px;
+  padding: 15px;
+  position: relative;
+  display: table;
+  float: left;
+  background-color: #aaa;
+  text align: center;
+}
+.social-icons {
+  text-align: center;
+  }  
+.social-icons li {
+  display:inline-block;
+  list-style-type:none;
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  }
+.social-icons li a {
+  border-bottom: none;
+  }
+.social-icons li img {
+  width:30px;
+  height:30px;
+  margin-right: 20px;
+}
